[package]
name = "kymach"
version = "0.1.1"
authors = ["Chang Lan <me@changlan.org>", "Icelain <icelain@ice.computer>"]
edition = "2018"

[dependencies]
libc = "*"
mio = { version = "0.7", features = ["os-util", "os-poll", "udp"] }
serde = "*"
serde_derive = "*"
log = "*"
env_logger = "*"
dns-lookup = "*"
snap = "*"
rand = "*"
transient-hashmap = "*"
ring = "*"
clap = "2.33.0"
bincode = { version = "2.0.1", features = ["alloc", "serde"] }

